<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AboutActivity"
    tools:showIn="@layout/activity_about">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:text="@string/plot_summary"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="40dp">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/ivAvatar"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/avatar"
                    android:padding="5dp"/>

                <ImageView
                    android:id="@+id/ivBat"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/bat"
                    android:padding="5dp"/>

                <ImageView
                    android:id="@+id/ivStairs"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/stairs"
                    android:padding="5dp"/>

                <ImageView
                    android:id="@+id/ivLock"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/lock"
                    android:padding="5dp"/>

                <ImageView
                    android:id="@+id/ivMark"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/mark"
                    android:padding="5dp"/>

                <ImageView
                    android:id="@+id/ivMaxine"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/maxine"
                    android:padding="5dp"/>

                <ImageView
                    android:id="@+id/ivWinston"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/winston"
                    android:padding="5dp"/>

                <ImageView
                    android:id="@+id/ivAndrei"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/andrie"
                    android:padding="5dp"/>
                <ImageView
                    android:id="@+id/ivRock"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/rock"
                    android:padding="5dp"/>
                <ImageView
                    android:id="@+id/ivTintedRock"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/tinted_rock"
                    android:padding="5dp"/>
                <ImageView
                    android:id="@+id/ivSpikes"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/blood_spikes"
                    android:padding="5dp"/>
                <ImageView
                    android:id="@+id/ivFire"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:src="@drawable/fire"
                    android:padding="5dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/avatar_descript" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/bat_descript" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/stairs_descript" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/lock_descript" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/mark_descript" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/maxine_descript" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/winston_descript" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/andrie_descript" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/rock_descript" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/tinted_rock_descript" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/spikes_descript" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:text="@string/fire__descript" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>




</androidx.core.widget.NestedScrollView>
